# Veritrace

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  build.gradle  cardiac_traceability.mas2j  compose.yaml  logging.properties  package.json
.github/workflows/: ci.yml
agents/: cardiac_mass_agent.asl  care_planner.asl  care_planner_generated.asl  case_reasoner.asl  case_reasoner_generated.asl  runtime_coordinator.asl  trace_guardian.asl
app/review-console/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  ui-direction.md  vite.config.ts
approved/plans/: gdpr_breach_notification_plan.json  gdpr_lawful_processing_plan.json  gdpr_missing_legal_basis_plan.json  gdpr_special_category_plan.json
approved/rules/: cmr_mass_score_above_cutoff.json  critical_data_missing.json  ct_gray_zone_without_pet.json  gdpr_breach_notification_overdue.json  gdpr_lawful_processing_documented.json  (+2 more)
ast-grep-rules/: no-bare-except.yml  no-forbidden-local-paths.yml  no-hardcoded-secrets.yml  no-process-env-in-tools.yml
beliefs/: approved_plans.asl  approved_rule_sources.asl  approved_rules.asl  clinical_actions.asl  cutoffs.asl  source_snippets.asl  sources.asl
cases/: gc00.asl  gc04.asl  gc_gray_zone.asl  gdpr_breach_overdue.asl  gdpr_lawful_processing.asl  gdpr_missing_legal_basis.asl  gdpr_special_category.asl
llm-dspy/: README.md  pyproject.toml
llm-dspy/data/: examples.jsonl
llm-dspy/src/traceability_dspy/: __init__.py  config.py  evaluate.py  examples.py  metrics.py  modules.py  signatures.py
(+46 files in other folders)
